--- a/assets/css/sections/variables.css
+++ b/assets/css/sections/variables.css
@@ -1,6 +1,6 @@
 :root {
 	/* Colors */
-	--primary-color: #00bcdd;
+	--primary-color: #86d201;
 	--secondary-color: #ffb400;
 	--tertiary-color: #4a6660;
 	--light-purple-color: #a3adcc;
